Fix scrolling on mobile

--- a/resources/sass/pages/speakers.sass
+++ b/resources/sass/pages/speakers.sass
@@ -10,8 +10,11 @@
 
 
 .modal-background
-  width: 100%
-  height: 100%
+  position: absolute
+  top: 0
+  left: 0
+  bottom: 0
+  right: 0
   background-color: rgba(0,0,0,.5)
 
 .modal
